--- a/TODO
+++ b/TODO
@@ -1,6 +1,7 @@
 Implementation:
 - need to add 'team' and 'opposition' variables to BasePlayer class
             - these are strings of 'player_controlled' or 'ai_controlled'               # not done
+- need to implement a 'follow' steering behaviour                                       # not done
 
 1. Make scrollable field
             - Able to set pitch dimensions (multiple of 2)	                            # done
